# python-user-posts-microservice

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: build.yaml  lint.yaml
app_config/: config.default.yaml  config.yaml
config/: __init__.py
db/: __init__.py  session.py
grpc_api/: __init__.py
grpc_api/auth/: auth_pb2.py  auth_pb2_grpc.py
grpc_api/client/: __init__.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  config.yaml  deployment.yaml  dev.yaml  service.yaml  serviceaccount.yaml
models/: blog_post.py  pyobject_id.py  user.py
tests/utils/: test_auth.py
types/: __init__.py  blog_post.py
utils/: auth.py
