[tool.poetry]
name = "python-user-posts-microservice"
version = "0.1.0"
description = "Demo microservice to manage user blog posts"
authors = ["dpalmasan <dpalmasan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
pymongo = "^4.0.1"
grpcio = "^1.43.0"
google-api-python-client = "^2.39.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.0.0"
grpcio-tools = "^1.43.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''