[tool.poetry]
name = "python-user-posts-microservice"
version = "0.1.0"
description = "Demo microservice to manage user blog posts"
authors = ["dpalmasan <dpalmasan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
pymongo = "^4.0.1"
grpcio = "^1.43.0"
google-api-python-client = "^2.39.0"
click = "7.1.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^4.0.1"
pytest = "^7.0.0"
grpcio-tools = "^1.43.0"
pytest-cov = "^3.0.0"
pre-commit = "2.14.0"
mypy = "^0.942"
types-PyYAML = "^6.0.5"
types-protobuf = "^3.19.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | grpc_api
)/
'''

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*"]

[tool.pytest.ini_options]
minversion = "6.0.0rc1"
# Always using Coverage.py disables debugging.
addopts = "--cov=. -ra -v"
testpaths = [
  "tests",
]

[tool.mypy]
exclude = ["grpc_api/", "config/"]

[[tool.mypy.overrides]]

module = [
    "google.protobuf"
]
ignore_missing_imports = true
